--- a/PySSHGui/pySSHGui.ui
+++ b/PySSHGui/pySSHGui.ui
@@ -19,15 +19,7 @@
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="buttonsLayout">
       <item>
-       <layout class="QGridLayout" name="hostsLayout">
-        <item row="0" column="0">
-         <widget class="QRadioButton" name="hostRadioButton">
-          <property name="text">
-           <string>Host</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <layout class="QGridLayout" name="hostsLayout"/>
       </item>
       <item>
        <spacer name="verticalSpacer">
